package guice;

public interface AnimalService {

    String getName();
}
