@startuml

title __DEMO_JAVA's Class Diagram__\n

  package cs.service.core {
    package cs.service.core.resources {
      abstract class AbstractResource {
      }
    }
  }
  

  package guice {
    interface AnimalService {
    }
  }
  

  package cs.service.core {
    class App {
    }
  }
  

  package guice {
    package guice.pig {
      class DefaultPigService {
      }
    }
  }
  

  package cs.service.core {
    package cs.service.core.resources {
      class DemoResource {
      }
    }
  }
  

  package guice {
    package guice.pig {
      class FakeService {
      }
    }
  }
  

  package guice {
    class GuiceModule {
    }
  }
  

  package cs.service.core {
    package cs.service.core.filter {
      class LoggingFilter {
      }
    }
  }
  

  package guice {
    class Main {
    }
  }
  

  package cs.service.core {
    package cs.service.core.listeners {
      class StartListeners {
      }
    }
  }
  

  DefaultPigService -up-|> AnimalService
  DemoResource -up-|> AbstractResource
  FakeService -up-|> AnimalService
  GuiceModule -up-|> AbstractModule
  LoggingFilter -up-|> Filter
  StartListeners -up-|> ServletContextListener


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
